# finalnvr

./: .eslintrc.js  .prettierignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
config/: index.js
docker/: README.md  devkit.Dockerfile  docker-compose-pravega.yaml  start-pravega.sh  stop-pravega.sh
docs/: pre-production.md
src/: App.vue  main.ts
src-backend/: .gitignore  Cargo.toml
src-backend/migrations/2023-10-15-090134_create_cameras/: down.sql  up.sql
src-backend/src/: handler.rs  lib.rs  main.rs  protocol.rs  server.rs
src-backend/src/db/: models.rs  schema.rs
src-backend/src/http/: config.rs
src-backend/src/ws/: connection.rs  mod.rs  protocol.rs  server.rs
src/components/: AppLogo.vue
src/components/icons/: VaIconCleanCode.vue  VaIconColor.vue  VaIconFaster.vue  VaIconFree.vue  VaIconFresh.vue  VaIconMenu.vue  VaIconMenuCollapsed.vue  VaIconMessage.vue  VaIconNotification.vue  VaIconResponsive.vue  VaIconRich.vue  VaIconSlower.vue  VaIconVue.vue  VaIconVuestic.vue
src/components/maps/: LineMap.vue
src/components/navbar/: Navbar.vue
src/components/navbar/components/: AppNavbarActions.vue
src/components/navbar/components/dropdowns/: ColorDropdown.vue  ColorDropdownItem.vue  LanguageDropdown.vue  NotificationDropdown.vue  ProfileDropdown.vue  SettingsDropdown.vue
src/components/sidebar/: NavigationRoutes.ts  Sidebar.vue
src/components/sidebar/menu/: MenuAccordion.vue  MenuMinimized.vue
src/components/va-charts/: VaChart.vue  vaChartConfigs.js
src/components/va-charts/chart-types/: BarChart.vue  BubbleChart.vue  DoughnutChart.vue  HorizontalBarChart.vue  LineChart.vue  PieChart.vue
src/components/va-medium-editor/: VaMediumEditor.vue
src/data/: CountriesList.ts  types.ts
src/data/charts/: barChartData.ts  bubbleChartData.ts  doughnutChartData.ts  horizontalBarChartData.ts  lineChartData.ts  pieChartData.ts
src/data/charts/composables/: useChartColors.ts  useChartData.ts
src/data/maps/: bubbleMapData.ts  lineMapData.ts
src/i18n/: index.ts
src/i18n/locales/: cn.json  es.json  gb.json
src/layouts/: AppLayout.vue  AuthLayout.vue
src/pages/404-pages/: CategoriesConfig.ts  MadeByComponent.vue  VaPageNotFound.vue  VaPageNotFoundCustom.vue  VaPageNotFoundLargeText.vue  VaPageNotFoundSearch.vue  VaPageNotFoundSimple.vue  Wallpaper.vue
src/pages/admin/cameras/: Camera.ts  CameraModal.vue  Cameras.vue  Webrtc.ts
src/pages/admin/contents/: Images.vue  Video.ts  Videos.vue
src/pages/admin/dashboard/: Dashboard.vue  DashboardCharts.vue  DashboardContributorsList.vue  DashboardInfoBlock.vue  DashboardMap.vue  DashboardTabs.vue
src/pages/admin/dashboard/composables/: usePartOfChartData.ts
src/pages/admin/dashboard/dashboard-tabs/: BankDetailsTab.vue  BillingAddressTab.vue  OverviewTab.vue
src/pages/admin/forms/form-elements/: FormElements.vue
src/pages/admin/forms/medium-editor/: MediumEditor.vue
src/pages/admin/maps/bubble-maps/: BubbleMap.vue  BubbleMapsPage.vue
src/pages/admin/maps/leaflet-maps/: LeafletMap.vue  LeafletMapsPage.vue
src/pages/admin/maps/line-maps/: LineMapsPage.vue
src/pages/admin/maps/maplibre-maps/: MapLibreMap.vue  MapLibreMapsPage.vue
src/pages/admin/maps/yandex-maps/: YandexMapsPage.vue
src/pages/admin/pages/: 404PagesPage.vue  FaqPage.vue
src/pages/admin/statistics/charts/: Charts.vue
src/pages/admin/statistics/progress-bars/: ProgressBars.vue
src/pages/admin/tables/data-tables/: DataTables.vue
src/pages/admin/tables/markup-tables/: MarkupTables.vue
src/pages/admin/ui/: route.ts
src/pages/admin/ui/cards/: Cards.vue
src/pages/auth/login/: Login.vue
src/pages/auth/recover-password/: RecoverPassword.vue
src/pages/auth/signup/: Signup.vue
src/router/: index.ts
src/scss/: main.scss
src/scss/icon-fonts/brandico/: brandico.scss
src/scss/icon-fonts/entypo/: entypo.scss
src/scss/icon-fonts/fontelico/: fontelico.scss
src/scss/icon-fonts/glyphicons/: glyphicons.scss
src/scss/icon-fonts/iconicfill/: iconicfill.scss
src/scss/icon-fonts/iconicstroke/: iconicstroke.scss
src/scss/icon-fonts/maki/: maki.scss
src/scss/icon-fonts/openwebicons/: openwebicons.scss
src/scss/icon-fonts/typicons/: typicons.scss
src/scss/icon-fonts/vuestic-icons/: vuestic-icons.scss
src/scss/icon-fonts/zocial/: zocial.scss
src/scss/vuestic-sass/: index.scss
src/services/vuestic-ui/: global-config.ts  themes.ts
src/services/vuestic-ui/components/: va-icon.ts
src/services/vuestic-ui/icons-config/: aliases.ts  icons-config.ts
src/stores/: global-store.ts
www/: index.html
(+43 files in other folders)
