[package]
name = "src-backend"
version = "1.0.0"
authors = ["Luis Liu <luis_liu@dell.com>"]
license = "Apache License 2.0"
description = "NVR with streamstorage for realtime analysis"
repository = "https://github.com/streamstorage/finalnvr"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_18"] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gstfmp4 = { package = "gst-plugin-fmp4", git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git" }
m3u8-rs = "5.0"


async-std = { version = "1", features = ["unstable", "attributes"] }
async-native-tls = "0.4"
async-tungstenite = { version = "0.19", features = ["async-std-runtime", "async-native-tls"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }


[[bin]]
name = "webrtc-signalling-server"
path = "src/bin/webrtc-signalling-server.rs"
