[package]
name = "src-backend"
version = "1.0.0"
authors = ["Luis Liu <luis_liu@dell.com>"]
license = "Apache License 2.0"
description = "NVR with streamstorage for realtime analysis"
repository = "https://github.com/streamstorage/finalnvr"
categories = ["streaming"]
keywords = ["nvr", "pravega"]
edition = "2021"
default-run = "src-backend"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.1.3", features = ["sqlite"] }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_18"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "add_user"

[[bin]]
name = "rtsp_camera_to_pravega"
