[package]
name = "src-backend"
version = "1.0.0"
authors = ["Luis Liu <luis_liu@dell.com>"]
license = "Apache License 2.0"
description = "NVR with streamstorage for realtime analysis"
repository = "https://github.com/streamstorage/finalnvr"
categories = ["streaming"]
keywords = ["nvr", "pravega"]
edition = "2021"
default-run = "src-backend"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1"
async-tungstenite = { version = "0.23", features = ["tokio-runtime", "tokio-native-tls"] }
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.1.3", features = ["sqlite"] }
futures = "0.3"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_18"] }
nix = { version = "0.27.1", features = ["process"] }
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "c0f18135798cf4f54512e13066d94aed1a71dfb8" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "c0f18135798cf4f54512e13066d94aed1a71dfb8" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "c0f18135798cf4f54512e13066d94aed1a71dfb8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = "0.1.11"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "add_user"

[[bin]]
name = "rtsp_camera_to_pravega"
